@@ -1,0 +1,50 @@
+[buildout]
+extends = 
+    buildout-prod.cfg
+
+parts +=
+    convertit-conf
+    gunicorn-convertit-conf
+    gunicorn-screamshotter-conf
+
+eggs +=
+    convertit
+    screamshotter
+
+[mkdirs]
+paths += ${convertit-conf:download_dir}
+         ${convertit-conf:converted_dir}
+
+[gunicorn-convertit-conf]
+recipe = collective.recipe.genshi
+workers = 4
+timeout = 30
+bind = ${convertit:host}:${convertit:port}
+pidfile = ${django:deployroot}/var/run/gunicorn-convertit.pid
+errorlog = ${django:deployroot}/var/log/convertit.log
+input = ${buildout:directory}/conf/gunicorn.conf.in
+output = ${django:deployroot}/etc/gunicorn-convertit.conf
+
+[gunicorn-screamshotter-conf]
+recipe = collective.recipe.genshi
+workers = 4
+timeout = 30
+bind = ${screamshotter:host}:${screamshotter:port}
+pidfile = ${django:deployroot}/var/run/gunicorn-screamshotter.pid
+errorlog = ${django:deployroot}/var/log/screamshotter.log
+input = ${buildout:directory}/conf/gunicorn.conf.in
+output = ${django:deployroot}/etc/gunicorn-screamshotter.conf
+
+[convertit-conf]
+recipe = collective.recipe.genshi
+download_dir = ${django:mediaroot}/convertit/download
+converted_dir = ${django:mediaroot}/convertit/converted
+host = ${convertit:host}
+port = ${convertit:port}
+input = ${buildout:directory}/conf/convertit.cfg.in
+output = ${django:deployroot}/etc/convertit.cfg
+
+[supervisor]
+programs +=
+    40 convertit (stdout_logfile=${django:deployroot}/var/log/convertit.log stderr_logfile=${django:deployroot}/var/log/convertit.log) ${django:deployroot}/bin/gunicorn_paster [-c ${gunicorn-convertit-conf:output} ${convertit-conf:output}] ${django:deployroot}/etc true
+    50 screamshotter (environment=ALLOWED_HOSTS=* stdout_logfile=${django:deployroot}/var/log/screamshotter.log stderr_logfile=${django:deployroot}/var/log/screamshotter.log) ${django:deployroot}/bin/gunicorn_django [--config=${gunicorn-screamshotter-conf:output} screamshotter.settings] ${django:deployroot}/etc true
