@@ -9,17 +9,12 @@ parts +=
     gunicorn-api-conf
     tilecache-conf
     gunicorn-tilecache-conf
-    convertit-conf
-    gunicorn-convertit-conf
-    gunicorn-screamshotter-conf
     logrotate-conf
     logrotate-daily
     supervisor
     supervisor-conf
 
 eggs +=
-    convertit
-    screamshotter
     gunicorn
     tilecache
     Paste
@@ -34,8 +29,6 @@ paths += ${django:staticroot}
          ${django:deployroot}/var/tmp/
          ${tilecache-conf:cachedir}
          ${django:deployroot}/etc/init
-         ${convertit-conf:download_dir}
-         ${convertit-conf:converted_dir}
 
 [gunicorn]
 recipe = zc.recipe.egg
@@ -82,35 +75,6 @@ cachedir = ${django:deployroot}/var/tiles
 input = ${buildout:directory}/conf/tilecache.cfg.in
 output = ${django:deployroot}/etc/tilecache.cfg
 
-[gunicorn-convertit-conf]
-recipe = collective.recipe.genshi
-workers = 4
-timeout = 30
-bind = ${convertit:host}:${convertit:port}
-pidfile = ${django:deployroot}/var/run/gunicorn-convertit.pid
-errorlog = ${django:deployroot}/var/log/convertit.log
-input = ${buildout:directory}/conf/gunicorn.conf.in
-output = ${django:deployroot}/etc/gunicorn-convertit.conf
-
-[gunicorn-screamshotter-conf]
-recipe = collective.recipe.genshi
-workers = 4
-timeout = 30
-bind = ${screamshotter:host}:${screamshotter:port}
-pidfile = ${django:deployroot}/var/run/gunicorn-screamshotter.pid
-errorlog = ${django:deployroot}/var/log/screamshotter.log
-input = ${buildout:directory}/conf/gunicorn.conf.in
-output = ${django:deployroot}/etc/gunicorn-screamshotter.conf
-
-[convertit-conf]
-recipe = collective.recipe.genshi
-download_dir = ${django:mediaroot}/convertit/download
-converted_dir = ${django:mediaroot}/convertit/converted
-host = ${convertit:host}
-port = ${convertit:port}
-input = ${buildout:directory}/conf/convertit.cfg.in
-output = ${django:deployroot}/etc/convertit.cfg
-
 [nginx-conf]
 recipe = collective.recipe.genshi
 port = 80
@@ -145,8 +109,6 @@ programs =
     20 ${django:project} (stdout_logfile=${django:deployroot}/var/log/${django:project}.log stderr_logfile=${django:deployroot}/var/log/${django:project}.log) ${django:deployroot}/bin/django [run_gunicorn --config=${gunicorn-app-conf:output}] ${django:deployroot}/etc true
     20 ${django:project}_api (stdout_logfile=${django:deployroot}/var/log/${django:project}.log stderr_logfile=${django:deployroot}/var/log/${django:project}.log) ${django:deployroot}/bin/django [run_gunicorn --config=${gunicorn-api-conf:output}] ${django:deployroot}/etc true
     30 tilecache (stdout_logfile=${django:deployroot}/var/log/tilecache.log stderr_logfile=${django:deployroot}/var/log/tilecache.log) ${django:deployroot}/bin/gunicorn [-c ${gunicorn-tilecache-conf:output} TileCache:wsgiApp] ${django:deployroot}/etc true
-    40 convertit (stdout_logfile=${django:deployroot}/var/log/convertit.log stderr_logfile=${django:deployroot}/var/log/convertit.log) ${django:deployroot}/bin/gunicorn_paster [-c ${gunicorn-convertit-conf:output} ${convertit-conf:output}] ${django:deployroot}/etc true
-    50 screamshotter (environment=ALLOWED_HOSTS=* stdout_logfile=${django:deployroot}/var/log/screamshotter.log stderr_logfile=${django:deployroot}/var/log/screamshotter.log) ${django:deployroot}/bin/gunicorn_django [--config=${gunicorn-screamshotter-conf:output} screamshotter.settings] ${django:deployroot}/etc true
 
 [supervisor-conf]
 recipe = collective.recipe.genshi
